fixed some buttons not showing
some buttons didnt show up anymore due to a fixed home button

--- a/ZEROSC.theme.css
+++ b/ZEROSC.theme.css
@@ -821,7 +821,9 @@ svg.icon-22AiRD:hover{color:var(--interactive-hover)}
 .guilds-1SWlCJ .scroller-1Bvpku{contain:none!important;padding-top:0}
 .guilds-1SWlCJ .scroller-1Bvpku > [aria-label],.guilds-1SWlCJ .scroller-1Bvpku > [style]:nth-child(2){margin-top:55px}
 .guilds-1SWlCJ .scroller-1Bvpku > [style] ~ [aria-label]{margin-top:0}
-.wrapper-3NnKdC > ul > .scroller-1Bvpku > div[aria-label="Servers"]{margin-top:60px}
+.scroller-1Bvpku > :nth-child(2) {
+    margin-top: 50px;
+}
 .tutorialContainer-2sGCg9{box-shadow:0 5px 5px var(--background-tertiary)}
 .container-3w7J-x{z-index:1}
 .guilds-1SWlCJ{width:80px}
